# robot

./: .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  Dockerfile  Makefile.toml  README.md  rust-toolchain
.cargo/: config.toml
config/: default.toml
src/: api.rs  config.rs  input.rs  main.rs  motors.rs  sensors.rs
src/input/: mod.rs  tank.rs
