[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
edition = "2018"
name = "robot"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-std = {version = "1.8", features = ["attributes"]}
config = {version = "0.10", default-features = false, features = ["toml"]}
env_logger = "0.8"
gilrs = {version = "0.8", features = ["serde-serialize"]}
linux-embedded-hal = "0.3"
log = "0.4"
pwm-pca9685 = "0.3"
serde = {version = "1.0", features = ["derive"]}
tide = "0.16"
